--- a/app/src/main/res/layout/student_view.xml
+++ b/app/src/main/res/layout/student_view.xml
@@ -5,13 +5,13 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="Student_view">
+    tools:context=".Student_view">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        tools:context="Student_view">
+        tools:context=".Student_view">
 
         <LinearLayout
             android:layout_width="match_parent"
