--- a/app/src/main/res/layout/student_view.xml
+++ b/app/src/main/res/layout/student_view.xml
@@ -1,11 +1,103 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_marginLeft="10dp"
+    android:layout_marginRight="10dp"
     android:orientation="vertical"
     tools:context="com.ark.my_app_firebase.Student_View">
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="170dp"
+        android:layout_weight="1"
+        android:orientation="horizontal">
+
+        <LinearLayout
+            android:layout_width="280dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:gravity="left"
+            android:orientation="horizontal">
+
+            <ImageView
+                android:id="@+id/tutorpp"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:layout_gravity="center"
+                app:srcCompat="@drawable/default_profile_picture" /> <!-- tutor change it by the real tutor profile pic -->
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/etName"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1" /> <!-- need to work later-->
+            <!--                android:text="@string/Name ?"-->
+            <!--                android:textSize="20dp" -->
+            /> <!-- display the name of the tutor -->
+
+
+            <!--            <Spinner-->
+            <!--                android:id="@+id/spinner1"-->
+            <!--                android:layout_width="131dp"-->
+            <!--                android:layout_height="wrap_content" />-->
+
+            <!--            <Spinner-->
+            <!--                android:id="@+id/spinner2"-->
+            <!--                android:layout_width="match_parent"-->
+            <!--                android:layout_height="wrap_content"-->
+            <!--                android:layout_weight="1" />-->
+
+            <!--            <Spinner-->
+            <!--                android:id="@+id/spinner3"-->
+            <!--                android:layout_width="match_parent"-->
+            <!--                android:layout_height="wrap_content"-->
+            <!--                android:layout_weight="1" />-->
+        </LinearLayout>
+
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:gravity="right"
+            android:orientation="horizontal">
+
+
+            <!--         'Add Post' Button-->
+            <Button
+                android:id="@+id/add_post"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:layout_gravity="center"
+                android:layout_marginRight="10dp"
+                android:background="@drawable/buttons"
+                android:gravity="center"
+                android:text="+"
+                android:textColor="@color/white"
+                android:textSize="30dp"
+                />
+        </LinearLayout>
+    </LinearLayout>
+
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="650dp"
+        android:layout_weight="1"
+        android:orientation="vertical"
+        tools:context="com.example.myapplication.MainActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -35,12 +127,8 @@
 <!--                android:layout_height="wrap_content"-->
 <!--                android:layout_weight="1" />-->
         </LinearLayout>
-        <Button
-            android:id="@+id/add_post"
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:text="Add Post"
-            />
+
+
 
         <com.riyagayasen.easyaccordion.AccordionView
             android:id="@+id/sv_subject1"
@@ -192,3 +280,49 @@
 
     </LinearLayout>
 </ScrollView>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="170dp"
+        android:layout_weight="1"
+        android:orientation="horizontal">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:orientation="horizontal">
+
+            <Button
+                android:id="@+id/goHome"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="10dp"
+                android:background="@drawable/buttons"
+                android:gravity="center"
+                android:text="Home"
+                android:textColor="@color/white"
+                android:textSize="30dp" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:orientation="horizontal">
+
+            <Button
+                android:id="@+id/goChat"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="10dp"
+                android:background="@drawable/buttons"
+                android:gravity="center"
+                android:text="Chat"
+                android:textColor="@color/white"
+                android:textSize="30dp" />
+
+        </LinearLayout>
+    </LinearLayout>
+</LinearLayout>
