--- a/app/src/main/res/layout/student_view.xml
+++ b/app/src/main/res/layout/student_view.xml
@@ -24,11 +24,12 @@
             android:orientation="horizontal">
 
             <ImageView
-                android:id="@+id/tutorpp"
+                android:id="@+id/studentpp"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
                 android:layout_gravity="center"
-                app:srcCompat="@drawable/default_profile_picture" /> <!-- tutor change it by the real tutor profile pic -->
+                app:srcCompat="@drawable/default_profile_picture" />
+            <!-- student change it by the real profile pic -->
 
         </LinearLayout>
 
@@ -40,13 +41,13 @@
             android:orientation="horizontal">
 
             <TextView
-                android:id="@+id/etName"
+                android:id="@+id/studentName"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="1" /> <!-- need to work later-->
+                android:layout_weight="1" />
             <!--                android:text="@string/Name ?"-->
             <!--                android:textSize="20dp" -->
-            /> <!-- display the name of the tutor -->
+            /> <!-- display the name of the student -->
 
 
             <!--            <Spinner-->
